Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <h3>
 <a id="references" class="anchor" href="#references" aria-hidden="true"><span class="octicon octicon-link"></span></a>References</h3>
 
-<p><a href="http://www.asp.net/identity">http://www.asp.net/identity</a>
-<a href="https://github.com/aspnet/Identity">https://github.com/aspnet/Identity</a>
+<p><a href="http://www.asp.net/identity">http://www.asp.net/identity</a> <br>
+<a href="https://github.com/aspnet/Identity">https://github.com/aspnet/Identity</a> <br>
 <a href="https://github.com/nhibernate">https://github.com/nhibernate</a></p>
         </section>
 
@@ -63,6 +63,16 @@
       </div>
     </div>
 
-  
+            <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-17909369-11");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
